--- a/src/main/static/index.html
+++ b/src/main/static/index.html
@@ -140,7 +140,7 @@
             <tr style={{backgroundColor:
                       req.status === 'FINISHED'
                               ? "#C0FF20"
-                              : (req.status === 'PROCESSING'
+                              : (req.status === 'PROCESSED'
                                   ? "#FFC000"
                                   : "#80C0FF")}}>
               <td>{new Date(req.timestamp).toLocaleString()}</td>
